--- a/css/style.scss
+++ b/css/style.scss
@@ -124,31 +124,46 @@ body {
 
     .general-informations{
         height:100%;
+        width: 100%;
+        margin-left: 10%;
+        margin-right: 10%;
+        vertical-align: middle;
+
+
+
 
         .foreword{
-            height: 200px;
-            width: 300px;
+            margin:0;
+            height: 280px;
+            width: 40%;
             background-color: red;
             display: inline-block;
+
         }
         .opening-times{
-            height: 200px;
-            width: 300px;
+            margin:0;
+            height: 280px;
+            width: 40%;
             background-color: blue;
             display: inline-block;
+
         }
         .location{
-            height: 200px;
-            width: 300px;
+            margin:0;
+            height: 280px;
+            width: 40%;
             background-color: green;
             display: inline-block;
 
+
         }
         .contact{
-            height: 200px;
-            width: 300px;
+            margin:0;
+            height: 280px;
+            width: 40%;
             background-color: yellow;
             display: inline-block;
+
 
         }
 
