--- a/css/style.css
+++ b/css/style.css
@@ -52,75 +52,204 @@ body {
 .swiper-container {
   width: 100%;
   height: 100%; }
-  .swiper-container .swiper-slide .landing-page {
-    height: 100%;
-    background-image: url("../assets/imgs/landing_background.JPG");
-    background-size: cover;
-    background-repeat: no-repeat; }
-    .swiper-container .swiper-slide .landing-page .headline {
-      position: absolute;
-      top: calc(100% - 85%);
-      left: calc(100% - 85%); }
-      .swiper-container .swiper-slide .landing-page .headline img {
-        height: 200px;
-        width: 200px;
-        display: inline-block;
-        vertical-align: middle; }
-      .swiper-container .swiper-slide .landing-page .headline h1 {
-        color: #fff;
-        font-size: 50px;
-        display: inline-block;
-        vertical-align: middle;
-        padding: 10px; }
-    .swiper-container .swiper-slide .landing-page .navigation-down {
-      width: 200px;
-      text-align: center;
-      cursor: pointer;
-      position: absolute;
-      bottom: 0;
-      left: calc(100% - 57%); }
-      .swiper-container .swiper-slide .landing-page .navigation-down i {
-        color: #fff;
-        font-size: 60px;
-        text-align: center;
-        display: block;
-        margin: 0;
-        padding: 0; }
-      .swiper-container .swiper-slide .landing-page .navigation-down p {
-        color: #fff;
-        font-size: 20px;
-        display: block;
-        margin: -10px;
-        padding: 0; }
-  .swiper-container .swiper-slide .general-informations {
-    height: 100%;
+  .swiper-container .swiper-slide {
     width: 100%;
-    margin-left: 10%;
-    margin-right: 10%;
-    vertical-align: middle; }
-    .swiper-container .swiper-slide .general-informations .foreword {
+    height: 100%; }
+    .swiper-container .swiper-slide .landing-page {
+      height: 100%;
+      background-image: url("../assets/imgs/landing_background.JPG");
+      background-size: cover;
+      background-repeat: no-repeat;
       margin: 0;
-      height: 280px;
-      width: 40%;
-      background-color: red;
-      display: inline-block; }
-    .swiper-container .swiper-slide .general-informations .opening-times {
+      padding: 0; }
+      .swiper-container .swiper-slide .landing-page .headline {
+        position: absolute;
+        top: calc(100% - 85%);
+        left: calc(100% - 85%); }
+        .swiper-container .swiper-slide .landing-page .headline img {
+          height: 200px;
+          width: 200px;
+          display: inline-block;
+          vertical-align: middle; }
+        .swiper-container .swiper-slide .landing-page .headline h1 {
+          color: #fff;
+          font-size: 50px;
+          display: inline-block;
+          vertical-align: middle;
+          padding: 10px; }
+      .swiper-container .swiper-slide .landing-page .navigation-down {
+        width: 200px;
+        text-align: center;
+        cursor: pointer;
+        position: absolute;
+        bottom: 0;
+        left: calc(100% - 57%); }
+        .swiper-container .swiper-slide .landing-page .navigation-down i {
+          color: #fff;
+          font-size: 60px;
+          text-align: center;
+          display: block;
+          margin: 0;
+          padding: 0; }
+        .swiper-container .swiper-slide .landing-page .navigation-down p {
+          color: #fff;
+          font-size: 20px;
+          display: block;
+          margin: -10px;
+          padding: 0; }
+    .swiper-container .swiper-slide .general-informations {
+      height: 100%;
+      width: 100%;
       margin: 0;
-      height: 280px;
-      width: 40%;
-      background-color: blue;
-      display: inline-block; }
-    .swiper-container .swiper-slide .general-informations .location {
+      padding: 0; }
+      .swiper-container .swiper-slide .general-informations .information-wrapper {
+        height: 90%;
+        width: 90%;
+        margin-top: 5%;
+        margin-left: 5%;
+        margin-right: 5%;
+        line-height: 0; }
+      .swiper-container .swiper-slide .general-informations .foreword {
+        width: 50%;
+        height: 45%;
+        background-color: #005BA9;
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+        float: left;
+        line-height: normal; }
+        .swiper-container .swiper-slide .general-informations .foreword h1 {
+          color: #fff;
+          text-align: center;
+          font-size: 30px;
+          margin: 0;
+          padding-top: 10%; }
+        .swiper-container .swiper-slide .general-informations .foreword p {
+          color: #fff;
+          text-align: center;
+          font-size: 18px;
+          padding: 0% 10% 5% 10%;
+          margin: 0; }
+      .swiper-container .swiper-slide .general-informations .opening-times {
+        width: 50%;
+        height: 45%;
+        display: inline-block;
+        background-color: #e2e2e2;
+        margin: 0;
+        padding: 0;
+        line-height: normal;
+        float: right; }
+      .swiper-container .swiper-slide .general-informations .location {
+        width: 50%;
+        height: 45%;
+        background-color: #000;
+        margin: 0;
+        padding: 0;
+        float: left;
+        display: inline-block;
+        line-height: normal; }
+      .swiper-container .swiper-slide .general-informations .contact {
+        width: 50%;
+        height: 45%;
+        background-color: #004081;
+        margin: 0;
+        padding: 0;
+        display: inline-block;
+        line-height: normal;
+        float: right; }
+    .swiper-container .swiper-slide .team-page {
+      height: 100%;
+      width: 100%;
       margin: 0;
-      height: 280px;
-      width: 40%;
-      background-color: green;
-      display: inline-block; }
-    .swiper-container .swiper-slide .general-informations .contact {
-      margin: 0;
-      height: 280px;
-      width: 40%;
-      background-color: yellow;
-      display: inline-block; }
+      padding: 0; }
+      .swiper-container .swiper-slide .team-page .team-wrapper {
+        position: relative; }
+        .swiper-container .swiper-slide .team-page .team-wrapper .team {
+          text-align: center;
+          vertical-align: middle;
+          background-color: #005AA7;
+          width: 240px;
+          height: 250px;
+          -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+          clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+          position: absolute;
+          top: 335px;
+          left: 230px; }
+          .swiper-container .swiper-slide .team-page .team-wrapper .team h1 {
+            padding-top: 23%;
+            color: #fff;
+            font-family: "Helvetica Neue"; }
+        .swiper-container .swiper-slide .team-page .team-wrapper .andreas {
+          background-image: url("../assets/imgs/Andreas.JPG");
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center bottom 25px;
+          width: 240px;
+          height: 250px;
+          -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+          clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+          position: absolute;
+          top: 230px;
+          left: 420px; }
+        .swiper-container .swiper-slide .team-page .team-wrapper .felix {
+          background-image: url("../assets/imgs/Felix.JPG");
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: bottom 20px left -50px;
+          width: 240px;
+          height: 250px;
+          -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+          clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+          position: absolute;
+          left: 610px;
+          top: 125px; }
+        .swiper-container .swiper-slide .team-page .team-wrapper .stefan {
+          background-image: url("../assets/imgs/Stefan.JPG");
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: bottom 25px right -50px;
+          width: 240px;
+          height: 250px;
+          -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+          clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+          position: absolute;
+          left: 800px;
+          top: 230px; }
+        .swiper-container .swiper-slide .team-page .team-wrapper .franziska {
+          background-image: url("../assets/imgs/Franziska.JPG");
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center bottom 25px;
+          width: 240px;
+          height: 250px;
+          -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+          clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+          position: absolute;
+          left: 420px;
+          top: 442px; }
+        .swiper-container .swiper-slide .team-page .team-wrapper .silvia {
+          background-image: url("../assets/imgs/Silvia.JPG");
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center;
+          width: 240px;
+          height: 250px;
+          -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+          clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+          position: absolute;
+          top: 335px;
+          left: 610px; }
+        .swiper-container .swiper-slide .team-page .team-wrapper .tanja {
+          background-image: url("../assets/imgs/Tanja.JPG");
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center bottom 10px;
+          width: 240px;
+          height: 250px;
+          -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+          clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+          position: absolute;
+          top: 442px;
+          left: 800px; }
 
 /*# sourceMappingURL=style.css.map */
