--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,25 @@ body {
         padding: 0;
         line-height: normal;
         float: right; }
+        .swiper-container .swiper-slide .general-informations .opening-times h1 {
+          color: #000;
+          text-align: center;
+          font-size: 30px;
+          margin: 0;
+          padding-top: 10%; }
+        .swiper-container .swiper-slide .general-informations .opening-times .times {
+          padding: 0% 30% 5% 30%; }
+          .swiper-container .swiper-slide .general-informations .opening-times .times .day {
+            color: #000;
+            font-size: 18px;
+            margin: 0;
+            display: inline-block; }
+          .swiper-container .swiper-slide .general-informations .opening-times .times .time {
+            display: inline-block;
+            color: #000;
+            font-size: 18px;
+            margin: 0;
+            float: right; }
       .swiper-container .swiper-slide .general-informations .location {
         width: 50%;
         height: 45%;
@@ -157,6 +176,18 @@ body {
         display: inline-block;
         line-height: normal;
         float: right; }
+        .swiper-container .swiper-slide .general-informations .contact h1 {
+          color: #fff;
+          text-align: center;
+          font-size: 30px;
+          margin: 0;
+          padding-top: 10%; }
+        .swiper-container .swiper-slide .general-informations .contact p {
+          color: #fff;
+          text-align: center;
+          font-size: 18px;
+          padding: 6% 10% 5% 10%;
+          margin: 0; }
     .swiper-container .swiper-slide .team-page {
       height: 100%;
       width: 100%;
