--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,30 @@ body {
           position: absolute;
           top: 230px;
           left: 420px; }
+          .swiper-container .swiper-slide .team-page .team-wrapper .andreas .andreas-hovered {
+            overflow: hidden;
+            width: 240px;
+            height: 250px;
+            -webkit-clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 75% 100%, 25% 100%, 0% 50%);
+            clip-path: polygon(25% 0%, 75% 0%, 100% 40%, 75% 80%, 25% 80%, 0% 40%);
+            background-color: rgba(0, 90, 167, 0.76);
+            opacity: 0;
+            -webkit-transition: opacity .5s;
+            -moz-transition: opacity .5s;
+            -ms-transition: opacity .5s;
+            -o-transition: opacity .5s;
+            transition: opacity .5s; }
+            .swiper-container .swiper-slide .team-page .team-wrapper .andreas .andreas-hovered h1 {
+              margin: 0;
+              font-size: 18px;
+              color: #fff;
+              text-align: center; }
+            .swiper-container .swiper-slide .team-page .team-wrapper .andreas .andreas-hovered i {
+              text-align: center; }
+            .swiper-container .swiper-slide .team-page .team-wrapper .andreas .andreas-hovered p {
+              text-align: center; }
+          .swiper-container .swiper-slide .team-page .team-wrapper .andreas:hover .andreas-hovered {
+            opacity: 1; }
         .swiper-container .swiper-slide .team-page .team-wrapper .felix {
           background-image: url("../assets/imgs/Felix.JPG");
           background-size: cover;
